--- a/note.html
+++ b/note.html
@@ -674,17 +674,18 @@ window.debug = false;
 <!-- extra额外 -->
 <script src="public/js/dec/main.js"></script>
 
+
 <script>
 window.require = window.requireNode;
 </script>
 <!-- 升级 -->
-<script>
+<!-- <script>
 (function () {
   var s = document.createElement('script');
   s.type = 'text/javascript';
   s.src = 'https://leanote.com/js/app_electron.js?t=' + Math.ceil(new Date() / 3600000);
   document.getElementsByTagName('body')[0].appendChild(s);
 })();
-</script>
+</script> -->
 </body>
 </html>
