1. 本地创建用户BUG修改 2. 导入时，有TAG时BUG 3. 登录界面大小可调节 4. 支持文件夹导入（选中子笔记本- 需要修正） 5. 支持全部导入（选择文件夹下所有目录-递归）

--- a/login.html
+++ b/login.html
@@ -226,11 +226,11 @@ $(function() {
 		(function() {
 			UserService.createLocalUser(username, pwd1, function(ret, dbuser) {
 			if(ret) {
-				setTimeout(function(){
+				//setTimeout(function(){
 					$body.removeClass('loading');
 					goToMainPage();
 					// gui.getCurrentWindow().close();
-				}, 2000);
+				//}, 2000);
 			} else {
 				$body.removeClass('loading');
 				showMsg(getMsg(dbuser));
