1.  MD模式添加table快捷功能

--- a/note.html
+++ b/note.html
@@ -698,6 +698,7 @@
 
         <script src="public/config.js"></script>
         <script src="public/js/jquery-1.9.0.min.js"></script>
+        <script src="public/js/jquery-ui.min.js"></script>
         <script src="public/js/jquery.ztree.all-3.5.js"></script>
         <script src="public/js/app/service.js"></script>
         <script src="public/js/lang.js"></script>
@@ -729,7 +730,9 @@
         <!-- 导入插件 执行 -->
         <script src="public/js/main.js"></script>
         <!-- markdown editor -->
-        <script src="public/md/main-v2.min.js"></script>
+        <!-- <script src="public/md/main-v2.min.js"></script> -->
+        <script src="public/md/main-v2.js"></script>
+
         <!-- extra额外 -->
         <script src="public/js/dec/main.js"></script>
 
